// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered with maximum props 1`] = `
<DocumentFragment>
  <div
    class="searchWrapper uui-picker_input-body-search"
  >
    <div
      class=""
      style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
    >
      <div
        data-autofocus-inside="true"
      >
        <div
          class="container uui-input-box -clickable uui-focus root uui-size-48 uui-control-mode-form"
          dir="auto"
          tabindex="-1"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
          <input
            class="uui-input"
            dir="ltr"
            inputmode="search"
            placeholder="Search"
            tabindex="0"
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="root uui-flex-row uui-picker_input-body uui-size-36"
    style="max-height: 800px;"
    tabindex="-1"
  >
    <div
      class="root uui-scroll-bars scrollContainer"
      data-overlayscrollbars="host"
      data-overlayscrollbars-initialize=""
      style="height: 100%; width: 100%;"
    >
      <div
        class="os-size-observer"
      >
        <div
          class="os-size-observer-listener"
        />
      </div>
      <div
        class=""
        data-overlayscrollbars-padding=""
        style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
      >
        <div
          aria-orientation="vertical"
          data-overlayscrollbars-contents=""
          data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
          style="margin-right: 0px; margin-bottom: 0px; position: relative; flex: 1 1 auto; padding: 0px 0px 0px 0px;"
          tabindex="-1"
        >
          <div
            class="listContainer"
            style="min-height: 7px;"
          >
            <div
              style="margin-top: 0px;"
            >
              <div
                aria-posinset="1"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A1
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="2"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A1+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="3"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A2
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="4"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A2+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="5"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B1
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="6"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B1+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="7"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B2
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="8"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B2+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="9"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            C1
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="10"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            C1+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="11"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            C2
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-busy="false"
            aria-label=""
            aria-live="polite"
            class="container uui-blocker-container root"
            role="status"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataPickerBody should be rendered with minimum props 1`] = `
<DocumentFragment>
  <div
    class="root uui-flex-row uui-picker_input-body uui-size-36"
    tabindex="-1"
  >
    <div
      class="root uui-scroll-bars scrollContainer"
      data-overlayscrollbars="host"
      data-overlayscrollbars-initialize=""
      style="height: 100%; width: 100%;"
    >
      <div
        class="os-size-observer"
      >
        <div
          class="os-size-observer-listener"
        />
      </div>
      <div
        class=""
        data-overlayscrollbars-padding=""
        style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
      >
        <div
          aria-orientation="vertical"
          data-overlayscrollbars-contents=""
          data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
          style="margin-right: 0px; margin-bottom: 0px; position: relative; flex: 1 1 auto; padding: 0px 0px 0px 0px;"
          tabindex="-1"
        >
          <div
            class="listContainer"
            style="min-height: NaNpx;"
          >
            <div
              style="margin-top: 0px;"
            >
              <div
                aria-posinset="1"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A1
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="2"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A1+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="3"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A2
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="4"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            A2+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="5"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B1
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="6"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B1+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="7"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B2
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="8"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            B2+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="9"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            C1
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="10"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            C1+
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-posinset="11"
                class="pickerRow uui-picker_input-row uui-size-36 align-widgets-top"
                role="option"
              >
                <div
                  class="flexCell rowContent"
                  style="min-width: 0; flex-grow: 1; flex-basis: 0px;"
                >
                  <div
                    class="contentWrapper"
                  >
                    <div
                      class="flexCell root uui-picker_input-item uui-typography"
                      style="min-width: 0; flex-basis: auto;"
                    >
                      <div
                        class="root uui-flex-row columnGap uui-size-36"
                        style="--uui-picker_item-vertical-padding: 9px;"
                      >
                        <div
                          class="flexCell"
                          style="min-width: 0; flex-basis: auto;"
                        >
                          <div
                            class="title uui-size-36"
                          >
                            C2
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-busy="false"
            aria-label=""
            aria-live="polite"
            class="container uui-blocker-container root"
            role="status"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-auto-hide-hidden os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataPickerBody should be rendered without rows 1`] = `
<DocumentFragment>
  <div
    class="root uui-flex-row uui-picker_input-body uui-size-36"
    tabindex="-1"
  >
    <div>
      Not found
    </div>
  </div>
</DocumentFragment>
`;
